[tool.poetry]
name = "zotnote"
version = "0.3.3"
description = "Streamlining reading notes with Zotero"
authors = [
    "Asura Enkhbayar <asura.enkhbayar@gmail.com>"
]
license = "MIT"
packages = [
    { include = "zotnote", from="src" }
]

keywords = ['zotero', 'literature-review', 'reading-notes']
readme = 'README.md'
repository = "https://github.com/bubblbu/zotnote"
homepage = "https://github.com/bubblbu/zotnote"

[tool.poetry.scripts]
zotnote = "zotnote.application:main"

[tool.poetry.dependencies]
python = "^3.6"
click = "^7.1.1"
jinja2 = "^2.11.1"
xdg = "^4.0.1"
tomlkit = "^0.5.11"
requests = "^2.23.0"
click-option-group = "^0.3.0"

[tool.poetry.dev-dependencies]
flake8 = "^3.7.9"
autopep8 = "^1.5"
pytest = "5.3.*"
pytest-sugar = "^0.9.2"
pytest-cov = "^2.8.1"
black = "^19.10b0"
flake8-docstrings = "^1.5.0"
bump2version = "^1.0.0"
pre-commit = "^1.10"

[tool.isort]
line_length = 88
force_single_line = true

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
